<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewFragmentC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_b"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnFragmentC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_green_light"
        android:textColor="@color/black"
        android:layout_marginVertical="30dp"
        android:layout_gravity="center"
        android:text="@string/fragment_c" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/back" />

</LinearLayout>