<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textViewFragmentC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_c"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnFragmentD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="30dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/fragment_d"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnFragmentA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/fragment_a"
        android:textColor="@color/white" />

</LinearLayout>